--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <title>Document</title>
-    <script src="script.js"></script>
-</head>
-<body>
-    Hello wodsdrld
-</body>
-</html>
+[
+  {
+    "index": "/",
+    "url": "https://1wisk.top"
+  }
+]
