--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 [
   {
-    "index": "/",
-    "url": "https://1wisk.top"
+    "index": "/there-are-no-files-here",
+    "url": "https://1wcpw.xyz""
   }
 ]
