--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
-[
-  {
-    "index": "/there-are-no-files-here",
-    "url": "https://1wcpw.xyz""
-  }
-]
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Serg Kyc frame test</title>
+</head>
+<body>
+  Kyc test.
+  <br/>
+  Let's try to take picture.
+  <br/>
+  <br/>
+  <input type="file" accept="image/*" capture />
+</body>
+</html>
