--- a/index.html
+++ b/index.html
@@ -1,18 +1,39 @@
-<!doctype html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Serg Kyc frame test</title>
+   <title>Open webcam using JavaScript. </title>
 </head>
 <body>
-  Kyc test.
-  <br/>
-  Let's try to take picture.
-  <br/>
-  <br/>
-  <input type="file" accept="image/*" capture />
+   <h1>Open WebCam Using JavaScript</h1>
+   <br/>
+   <button id="startBtn" onclick="openCam()">Open Webcam</button>
+   <br/><br/>
+   <video id="videoCam"></video>
+   <script>
+      function openCam(){
+         let All_mediaDevices=navigator.mediaDevices
+         if (!All_mediaDevices || !All_mediaDevices.getUserMedia) {
+            console.log("getUserMedia() not supported.");
+            return;
+         }
+         All_mediaDevices.getUserMedia({
+            audio: true,
+            video: true
+         })
+         .then(function(vidStream) {
+            var video = document.getElementById('videoCam');
+            if ("srcObject" in video) {
+               video.srcObject = vidStream;
+            } else {
+               video.src = window.URL.createObjectURL(vidStream);
+            }
+            video.onloadedmetadata = function(e) {
+               video.play();
+            };
+         })
+         .catch(function(e) {
+            console.log(e.name + ": " + e.message);
+         });
+      }
+   </script>
 </body>
 </html>
