--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       </form>
     </div>
     <pre><code>
-&lt;input type="text" autocomplete="one-time-code" inputmode="numeric" /&gt;
-&lt;script&gt;
+<input type="text" autocomplete="one-time-code" inputmode="numeric">
+<script>
 if ('OTPCredential' in window) {
   window.addEventListener('DOMContentLoaded', e =&gt; {
     const input = document.querySelector('input[autocomplete="one-time-code"]');
@@ -45,7 +45,7 @@ if ('OTPCredential' in window) {
     });
   });
 }
-&lt;/script&gt;
+    </script>
     </code></pre>
     <div>
       See the source code and play with it at <a href="https://glitch.com/edit/#!/web-otp">https://glitch.com/edit/#!/web-otp</a>
@@ -54,28 +54,28 @@ if ('OTPCredential' in window) {
       Learn more at <a href="http://web.dev/web-otp">http://web.dev/web-otp</a>.
     </div>
     <script>
-    if ('OTPCredential' in window) {
-      window.addEventListener('DOMContentLoaded', e => {
-        const input = document.querySelector('input[autocomplete="one-time-code"]');
-        if (!input) return;
-        const ac = new AbortController();
-        const form = input.closest('form');
-        if (form) {
-          form.addEventListener('submit', e => {
-            ac.abort();
-          });
-        }
-        navigator.credentials.get({
-          otp: { transport:['sms'] },
-          signal: ac.signal
-        }).then(otp => {
-          input.value = otp.code;
-          if (form) form.submit();
-        }).catch(err => {
-          console.log(err);
-        });
-      });
-    }
+    // if ('OTPCredential' in window) {
+    //   window.addEventListener('DOMContentLoaded', e => {
+    //     const input = document.querySelector('input[autocomplete="one-time-code"]');
+    //     if (!input) return;
+    //     const ac = new AbortController();
+    //     const form = input.closest('form');
+    //     if (form) {
+    //       form.addEventListener('submit', e => {
+    //         ac.abort();
+    //       });
+    //     }
+    //     navigator.credentials.get({
+    //       otp: { transport:['sms'] },
+    //       signal: ac.signal
+    //     }).then(otp => {
+    //       input.value = otp.code;
+    //       if (form) form.submit();
+    //     }).catch(err => {
+    //       console.log(err);
+    //     });
+    //   });
+    // }
     </script>
   </body>
 </html>
