--- a/index.html
+++ b/index.html
@@ -20,33 +20,35 @@
         <input type="submit" value="Submit">
       </form>
     </div>
-    <pre><code>
-<input type="text" autocomplete="one-time-code" inputmode="numeric">
-<script>
-if ('OTPCredential' in window) {
-  window.addEventListener('DOMContentLoaded', e =&gt; {
-    const input = document.querySelector('input[autocomplete="one-time-code"]');
-    if (!input) return;
-    const ac = new AbortController();
-    const form = input.closest('form');
-    if (form) {
-      form.addEventListener('submit', e =&gt; {
-        ac.abort();
-      });
-    }
-    navigator.credentials.get({
-      otp: { transport:['sms'] },
-      signal: ac.signal
-    }).then(otp =&gt; {
-      input.value = otp.code;
-      if (form) form.submit();
-    }).catch(err =&gt; {
-      console.log(err);
-    });
-  });
-}
-    </script>
-    </code></pre>
+    <pre>
+      <code>
+          <input type="text" autocomplete="one-time-code" inputmode="numeric">
+<!--           <script>
+          if ('OTPCredential' in window) {
+            window.addEventListener('DOMContentLoaded', e =&gt; {
+              const input = document.querySelector('input[autocomplete="one-time-code"]');
+              if (!input) return;
+              const ac = new AbortController();
+              const form = input.closest('form');
+              if (form) {
+                form.addEventListener('submit', e =&gt; {
+                  ac.abort();
+                });
+              }
+              navigator.credentials.get({
+                otp: { transport:['sms'] },
+                signal: ac.signal
+              }).then(otp =&gt; {
+                input.value = otp.code;
+                if (form) form.submit();
+              }).catch(err =&gt; {
+                console.log(err);
+              });
+            });
+          }
+        </script> -->
+    </code>
+    </pre>
     <div>
       See the source code and play with it at <a href="https://glitch.com/edit/#!/web-otp">https://glitch.com/edit/#!/web-otp</a>
     </div>
