--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ if ('OTPCredential' in window) {
     </div>
     <script>
       alert('Hi!');
+      alert('Hi2!');
     if ('OTPCredential' in window) {
       alert('OTPCredential is present!');
       window.addEventListener('DOMContentLoaded', e => {
