--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       The simplest Web OTP API demo
     </h1>
     <div>
-      Send an SMS that includes <pre><code>@sablinsergey.github.io #12345</code></pre> at the last line to this phone.
+      Send an SMS that includes <pre><code>@web-otp.glitch.me #12345</code></pre> at the last line to this phone.
     </div>
     <div style="border:1px solid; padding: 5px; 10px; margin: 10px 0;">
       <form action="/post" method="post">
@@ -24,6 +24,37 @@
 &lt;input type="text" autocomplete="one-time-code" inputmode="numeric" /&gt;
 &lt;script&gt;
 if ('OTPCredential' in window) {
+  window.addEventListener('DOMContentLoaded', e =&gt; {
+    const input = document.querySelector('input[autocomplete="one-time-code"]');
+    if (!input) return;
+    const ac = new AbortController();
+    const form = input.closest('form');
+    if (form) {
+      form.addEventListener('submit', e =&gt; {
+        ac.abort();
+      });
+    }
+    navigator.credentials.get({
+      otp: { transport:['sms'] },
+      signal: ac.signal
+    }).then(otp =&gt; {
+      input.value = otp.code;
+      if (form) form.submit();
+    }).catch(err =&gt; {
+      console.log(err);
+    });
+  });
+}
+&lt;/script&gt;
+    </code></pre>
+    <div>
+      See the source code and play with it at <a href="https://glitch.com/edit/#!/web-otp">https://glitch.com/edit/#!/web-otp</a>
+    </div>
+    <div>
+      Learn more at <a href="http://web.dev/web-otp">http://web.dev/web-otp</a>.
+    </div>
+    <script>
+    if ('OTPCredential' in window) {
       window.addEventListener('DOMContentLoaded', e => {
         const input = document.querySelector('input[autocomplete="one-time-code"]');
         if (!input) return;
@@ -38,48 +69,9 @@ if ('OTPCredential' in window) {
           otp: { transport:['sms'] },
           signal: ac.signal
         }).then(otp => {
-          alert('Code: ' + otp.code);
-          // input.value = otp.code;
-          // if (form) form.submit();
+          input.value = otp.code;
+          if (form) form.submit();
         }).catch(err => {
-          console.log(err);
-        });
-      });
-    }
-&lt;/script&gt;
-    </code></pre>
-    <div>
-      See the source code and play with it at <a href="https://glitch.com/edit/#!/web-otp">https://glitch.com/edit/#!/web-otp</a>
-    </div>
-    <div>
-      Learn more at <a href="http://web.dev/web-otp">http://web.dev/web-otp</a>.
-    </div>
-    <script>
-      alert('Hi!');
-      alert('Hi2!');
-    if ('OTPCredential' in window) {
-      alert('OTPCredential is present!');
-      window.addEventListener('DOMContentLoaded', e => {
-         alert('DOMContentLoaded!');
-        const input = document.querySelector('input[autocomplete="one-time-code"]');
-        if (!input) return;
-        const ac = new AbortController();
-        // const form = input.closest('form');
-        // if (form) {
-        //   form.addEventListener('submit', e => {
-        //     ac.abort();
-        //   });
-        // }
-        navigator.credentials.get({
-          otp: { transport:['sms'] },
-          signal: ac.signal
-        }).then(otp => {
-          alert('Code: ' + otp.code);
-          // input.value = otp.code;
-          // if (form) form.submit();
-           ac.abort();
-        }).catch(err => {
-          alert('Err: ' + err.message);
           console.log(err);
         });
       });
