--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <div style="border:1px solid; padding: 5px; 10px; margin: 10px 0;">
       <form action="/post" method="post">
         Enter OTP here:
-        <input type="text" autocomplete="one-time-code" inputmode="numeric" name="one-time-code">
+        <input type="text" inputmode="numeric" name="one-time-code">
         <input type="submit" value="Submit">
       </form>
     </div>
     <pre><code>
-&lt;input type="text" autocomplete="one-time-code" inputmode="numeric" /&gt;
+&lt;input type="text" inputmode="numeric" /&gt;
 &lt;script&gt;
 if ('OTPCredential' in window) {
       alert('OTPCredential')
