--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         body {
             padding: 0;
             margin: 0;
+            height: 100%;
         }
         body {
             background-color: yellow;
@@ -30,9 +31,9 @@
             justify-content: center;
             align-items: center;
             font-size: 40px;
+            font-family: monospace;
         }
     </style>
-
 </head>
 <body>
     Site Before
