--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Site before</title>
+
+    <!-- pwa -->
+    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
+    <meta name="msapplication-starturl" content="/index.html"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
+    <meta name="author" content="SS"/>
+    <meta name="application-name" content="SStest"/>
+    <meta name="theme-color" content="#090f1e" />
+    <meta name="msapplication-TileColor" content="#090f1e" />
+    <meta name="apple-mobile-web-app-title" content="SStest" />
+
     <style>
         html,
         body {
@@ -14,7 +26,7 @@
             height: 100%;
         }
         body {
-            background-color: red;
+            background-color: green;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -24,6 +36,6 @@
     </style>
 </head>
 <body>
-    Lock Screen
+    Site After
 </body>
 </html>
