--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             height: 100%;
         }
         body {
-            background-color: green;
+            background-color: yellow;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -36,6 +36,6 @@
     </style>
 </head>
 <body>
-    Site After
+    Site Before
 </body>
 </html>
