--- a/index.html
+++ b/index.html
@@ -5,19 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="Cache-control" content="no-cache">
+    <meta http-equiv="Expires" content="-1">
     <title>Site before</title>
-
-    <!-- pwa -->
-    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
-    <meta name="msapplication-starturl" content="/index.html"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <meta name="author" content="SS"/>
-    <meta name="application-name" content="SStest"/>
-    <meta name="theme-color" content="#090f1e" />
-    <meta name="msapplication-TileColor" content="#090f1e" />
-    <meta name="apple-mobile-web-app-title" content="SStest" />
-
     <style>
         html,
         body {
@@ -26,7 +16,7 @@
             height: 100%;
         }
         body {
-            background-color: yellow;
+            background-color: red;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -36,6 +26,6 @@
     </style>
 </head>
 <body>
-    Site Before
+    Lock Screen
 </body>
 </html>
