--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lock screen</title>
+    <title>Site before</title>
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -21,7 +21,6 @@
     <meta name="theme-color" content="#090f1e" />
     <meta name="msapplication-TileColor" content="#090f1e" />
     <meta name="apple-mobile-web-app-title" content="SStest" />
-
     <style>
         html,
         body {
@@ -30,7 +29,7 @@
             height: 100%;
         }
         body {
-            background-color: red;
+            background-color: yellow;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -40,6 +39,10 @@
     </style>
 </head>
 <body>
-    Lock Screen
+    Site Before
+
+<script>
+    alert('hi');
+</script>
 </body>
 </html>
