--- a/index.html
+++ b/index.html
@@ -5,22 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Site before</title>
+    <title>Lock screen</title>
 
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
-    <meta http-equiv="Pragma" content="no-cache">
-    <meta http-equiv="Expires" content="0">
-
-    <!-- pwa -->
-    <link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
-    <meta name="msapplication-starturl" content="/index.html"/>
-    <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
-    <meta name="author" content="SS"/>
-    <meta name="application-name" content="SStest"/>
-    <meta name="theme-color" content="#090f1e" />
-    <meta name="msapplication-TileColor" content="#090f1e" />
-    <meta name="apple-mobile-web-app-title" content="SStest" />
     <style>
         html,
         body {
@@ -29,16 +15,58 @@
             height: 100%;
         }
         body {
-            background-color: yellow;
+            background-color: red;
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 40px;
             font-family: monospace;
+            flex-direction: column;
+        }
+
+        button {
+            border-radius: 50%;
+            height: 100px;
+            width: 100px;
+            margin-top: 20px;
+            font-size: 22px;
+            cursor: pointer;
+            outline: inherit;
+            border: none;
+            background-color: antiquewhite;
         }
     </style>
 </head>
 <body>
-    Site Before
+    Lock Screen
+
+    <script>
+        function reload() {
+            document.location = "/index.html?timeMark=" + Date.now();
+        }
+
+        function checkTimeMarkReload(force) {
+            if (force) {
+                reload();
+                return;
+            }
+
+            const timeMarkParam = new URL(window.location).searchParams.get('timeMark');
+            const now = Date.now();
+
+            if (!timeMarkParam || now - timeMarkParam >= 10000) {
+                reload();
+                return;
+            }
+
+            setTimeout(checkTimeMarkReload, 10000)
+        }
+
+        checkTimeMarkReload();
+    </script>
+
+    <button onclick="checkTimeMarkReload(true)">
+        Refresh
+    </button>
 </body>
 </html>
