--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Site after</title>
+    <title>Site before</title>
 
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
@@ -29,7 +29,7 @@
             height: 100%;
         }
         body {
-            background-color: green;
+            background-color: yellow;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -39,6 +39,6 @@
     </style>
 </head>
 <body>
-    Site After
+    Site Before
 </body>
 </html>
